Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,21 +51,21 @@ stages:
           - task: CmdLine@2
             inputs:
               script: 'trivy fs --format table -o fs.html .'
-  - stage: 
-    displayName: "SonarQube"
-    jobs:
-      - job: sonar_qube_analysis
-        displayName: "SonarQube Scan"
-        steps: 
-          - task: SonarQubePrepare@7
-            inputs:
-              SonarQube: 'sonar-sc'
-              scannerMode: 'cli'
-              configMode: 'manual'
-              cliProjectKey: 'Boardgame'
-              cliProjectName: 'Boardgame'
-              cliSources: '.'
-              extraProperties: 'sonar.java.binaries=.'
-          - task: SonarQubeAnalyze@7
-            inputs:
-              jdkversion: 'JAVA_HOME_17_X64'
+  # - stage: 
+  #   displayName: "SonarQube"
+  #   jobs:
+  #     - job: sonar_qube_analysis
+  #       displayName: "SonarQube Scan"
+  #       steps: 
+  #         - task: SonarQubePrepare@7
+  #           inputs:
+  #             SonarQube: 'sonar-sc'
+  #             scannerMode: 'cli'
+  #             configMode: 'manual'
+  #             cliProjectKey: 'Boardgame'
+  #             cliProjectName: 'Boardgame'
+  #             cliSources: '.'
+  #             extraProperties: 'sonar.java.binaries=.'
+  #         - task: SonarQubeAnalyze@7
+  #           inputs:
+  #             jdkversion: 'JAVA_HOME_17_X64'
