Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,7 +87,7 @@ stages:
           containerRegistry: '$(dockerRegistryServiceConnection)'
           repository: '$(imageRepository)'
           command: 'buildAndPush'
-          Dockerfile: 'app/Dockerfile'
+          Dockerfile: 'Dockerfile'
           tags: |
             $(Build.BuildId)
             latest
